qwen-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen-proxy-service
  namespace: default
spec:
  type: ExternalName
  externalName: host.minikube.internal
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
